crates/ffs-harness/src/snapshots/ffs_harness__swarm_operator_report__tests__swarm_operator_validation_report_json_shape.snap
---
source: crates/ffs-harness/src/swarm_operator_report.rs
expression: json
---
{
  "schema_version": 1,
  "report_id": "bd-p2j3e.7-swarm-operator-report-test",
  "valid": true,
  "card_count": 6,
  "required_card_count": 6,
  "proof_bundle_consumers": [
    "proof-bundle"
  ],
  "release_gate_consumers": [
    "release-gate"
  ],
  "proof_bundle_consumer_count": 1,
  "release_gate_consumer_count": 1,
  "claim_state_counts": {
    "experimental": 6
  },
  "cards": [
    {
      "idea_id": "tail_latency_decomposition",
      "source_lane": "bd-p2j3e.1",
      "selected_algorithmic_pattern": "tail_latency_decomposition_pattern",
      "release_claim_state": "experimental",
      "evidence_count": 1,
      "linked_bead_ids": [
        "bd-p2j3e.1"
      ]
    },
    {
      "idea_id": "numa_shard_harness",
      "source_lane": "bd-p2j3e.2",
      "selected_algorithmic_pattern": "numa_shard_harness_pattern",
      "release_claim_state": "experimental",
      "evidence_count": 1,
      "linked_bead_ids": [
        "bd-p2j3e.2"
      ]
    },
    {
      "idea_id": "rcu_qsbr_metadata",
      "source_lane": "bd-p2j3e.3",
      "selected_algorithmic_pattern": "rcu_qsbr_metadata_pattern",
      "release_claim_state": "experimental",
      "evidence_count": 1,
      "linked_bead_ids": [
        "bd-p2j3e.3"
      ]
    },
    {
      "idea_id": "parallel_wal_group_commit",
      "source_lane": "bd-p2j3e.4",
      "selected_algorithmic_pattern": "parallel_wal_group_commit_pattern",
      "release_claim_state": "experimental",
      "evidence_count": 1,
      "linked_bead_ids": [
        "bd-p2j3e.4"
      ]
    },
    {
      "idea_id": "cache_budget_controller",
      "source_lane": "bd-p2j3e.5",
      "selected_algorithmic_pattern": "cache_budget_controller_pattern",
      "release_claim_state": "experimental",
      "evidence_count": 1,
      "linked_bead_ids": [
        "bd-p2j3e.5"
      ]
    },
    {
      "idea_id": "scrub_repair_scheduler",
      "source_lane": "bd-p2j3e.6",
      "selected_algorithmic_pattern": "scrub_repair_scheduler_pattern",
      "release_claim_state": "experimental",
      "evidence_count": 1,
      "linked_bead_ids": [
        "bd-p2j3e.6"
      ]
    }
  ],
  "errors": []
}
